# iter8-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.sig  chown-volume.sh  docker-compose.yml  docker-compose.yml.sig  entrypoint.py  main.py  manifest.sig  manifest.txt  migrate.py  requirements.txt  temp.py  wait-forever.py
.run/: AutoDeploy.run.xml  discord_bot.run.xml
AutoDeploy/: Dockerfile  Dockerfile-runner  deployer.py  docker-compose.yml  requirements.txt  singleton_runner.py  update.sh
AutoDeploy/Runner/: .dockerignore  Dockerfile  Dockerfile-distroless  Dockerfile2  base-requirements.txt  docker-compose.yml
AutoDeploy/crypto/: crypto.py  private.pem.enc  pubkey.pem  sign.sh  verify.sh
Cpp/: .clang-format  .gitignore  CMakeLists.txt
Cpp/cmake/: dpp.cmake  magic_enum.cmake  platform_string.cmake  spdlog.cmake  sqlite.cmake  unused_boost.cmake  unused_sqlite.cmake
Cpp/src/: Bot.cpp  Bot.h  CogBase.hpp  CogRegistry.cpp  CogRegistry.hpp  Context.h  main.cpp
Cpp/src/Cogs/: BotBrokenCog.cpp  BotBrokenCog.h  Cog.h  DevCog.cpp  DevCog.h
Cpp/src/Core/: Commands.h  Common.h  Files.cpp  Files.h
Cpp/src/Database/: Connection.h  Model.h  Query.h
Cpp/src/Logging/: Log.cpp  Log.h
Cpp/src/Model/: Log.h  User.h
Cpp/src/magic_factory/: magic_factory.hpp  nameof.hpp
Python/: main.py  migrate.py
Python/cogs/: admin_roll_cog.py  bot_broken_cog.py  chat_cog.py  database_cog.py  dev_cog.py  gambling_cog.py  gif_cog.py  gifting_cog.py  shop_cog.py  stock_market_cog.py  timeout_bot.py
Python/utils/: admin_roll.py  bot.py  database.py  files.py  gamble.py  gifts.py  log.py  misc.py  model.py  shop.py  timeout.py
Python/utils/stocks/: stock_control_params.py  stock_controls.py  stock_db.py
Python/view/: components.py  shop_view.py
Web/: Dockerfile
Web/config/: nginx.conf
Web/static/: go.html  index.html  tictactoe.html
cogs/: admin_roll_cog.py  bot_broken_bot.py  bot_broken_cog.py  bot_utils.py  chat_cog.py  crash_cog.py  database_cog.py  dev_cog.py  gambling_cog.py  gif_bot.py  gif_cog.py  gifting_cog.py  shop_cog.py  stock_market_cog.py  timeout_bot.py  youtube_bot.py
cogs/utils/: bot.py  database.py  log.py  model.py
new/: deployer.py
utils/: admin_roll.py  bot.py  database.py  files.py  gamble.py  gifts.py  log.py  misc.py  model.py  shop.py  stock.py  timeout.py
utils/stocks/: stock_control_params.py  stock_controls.py  stock_db.py
v2/: main.py
view/: components.py  shop_view.py
